name:                TurtleCompiler
version:             0.1.0.0
synopsis:            Turtle compiler for comp3610 assignment 2
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Andrew M. Hall
maintainer:          Andrew M. Hall 
copyright:           2017 Andrew M. Hall
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable TurtleCompiler
  build-depends:       array, base >= 4.7 && < 5, mtl, containers, vector >= 0.11, bytestring, spool
  default-extensions:  NoImplicitPrelude
  build-tools:         happy, alex
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  other-modules:       Lexer, Parser, Analyse, Turtle, Compile
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.cecs.anu.edu.au/u5825803/TurtleCompiler
